added snake project and updated isityourbirthday.com

--- a/isityourbirthday.com/index.html
+++ b/isityourbirthday.com/index.html
@@ -29,9 +29,15 @@
     99.7% accurate</p>
   <p style="color: #ff2222; display: flex; align-items: flex-end; justify-content: center; width: 100%; height: 100%;">
     ** For those born on a leap day, our model jumps to an accuracy of 99.9%!</p>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-    <p
-      style="color: white; display: flex; align-items: flex-end; justify-content: center; width: 100%; height: 100%;">
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="
+    display:flex;
+    background: rgb(214, 14, 14);
+    border-radius: 15px;
+    font-family: 'arial-black';
+    font-size: 14px;
+    color: rgb(204, 19, 19);    
+  ">
+    <p style="color: white; display: flex; align-items: flex-end; justify-content: center; width: 100%; height: 100%;">
       Find out more about our model, by visiting our ML repository</p>
   </a>
 
