--- a/john.html
+++ b/john.html
@@ -158,13 +158,34 @@
                     </a>
                 </div>
 
+                <div class="project-item" title="https://www.youtube.com/embed/owzIXZ9U_Z4?rel=0&autoplay=1&mute=1">
+                    <a data-toggle="modal" data-target="#vidModal">
+                        <div class="project-scaffold">
+                            <div class="imagebox">
+                                <img class="project-image" style="float: right;" src="john/assets/snake_profile.png">
+                            </div>
+                            <div class="project-descript" style="float: left;">
+                                <h3 class="mb-0">Snake Duel: A Two Player Snake Game</h3>
+                                <hr style="margin: 5px;" />
+                                <b>Snake Duel: A Two Player Snake Game </b> is a mobile app that takes on the classic snake
+                                    game but enables two play. It focuses on game mechanics, timers, and gesture
+                                    detection. There is a desire to integrate more functionality such as powerups and
+                                    score counters in future interations.
+                                    <br> <br>Click to see an overview of the application :)
+                                    <br /><br />
+                                    <div class="flex-shrink-0"><span class="date">Feb 2021 - PRESENT</span></div>
+                            </div>
+                            
+                        </div>
+                    </a>
+                </div>
 
                 <div id="fruition" class="project-item"
                     title="https://www.youtube.com/embed/seEOX0T1l30?rel=0&autoplay=1&mute=1">
                     <a data-toggle="modal" data-target="#vidModal">
                         <div class="project-scaffold">
 
-                            <div class="project-descript" style="float: left;">
+                            <div class="project-descript" style="float: right;">
                                 <h3 class="mb-0">Fruition</h3>
                                 <hr style="margin: 5px;" />
                                 <b>Animation inspired by Rube Goldberg machines</b><br>
@@ -175,14 +196,14 @@
                                 <div class="flex-shrink-0"><span class="date">Jun 2018 - Nov 2018</span></div>
                             </div>
                             <div class="imagebox">
-                                <img class="project-image" style="float: right;" src="john/assets/fruition_profile.png">
+                                <img class="project-image" style="float: left;" src="john/assets/fruition_profile.png">
                             </div>
 
                         </div>
                     </a>
                 </div>
 
-                
+
             </div>
     </div>
     </section>
@@ -229,7 +250,8 @@
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                     <div><em><b>International Mathematics Modelling Competition</b></em></div>
                     Member of School Team | 1st Nationals | Top 5 Internationally<br />
-                    Attended Cermony for Meritorious Teams | @ Hong Kong <a href="https://www.youtube.com/watch?v=1qxc8FXQNig" target="_blank">(see more)</a> <br />
+                    Attended Cermony for Meritorious Teams | @ Hong Kong <a
+                        href="https://www.youtube.com/watch?v=1qxc8FXQNig" target="_blank">(see more)</a> <br />
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
