back button functionality implemented for everyoneee

--- a/template.html
+++ b/template.html
@@ -48,3 +48,12 @@
     <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
     <li class="list-inline-item"><i class="fab fa-npm"></i></li>
 </ul>
+
+<!-- Back icon button -->
+<li>
+    <a class="nav-link" href="index.html">
+        <div class="icon-text"><i class="fas fa-users fa-1x"></i> <b>SEEVEE</b></div>
+    </a>
+</li>
+
+<link href="css/icon.css" rel="stylesheet" />
