--- a/john.html
+++ b/john.html
@@ -17,6 +17,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
+    <link href="css/icon.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -40,6 +41,11 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Achievements</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#volunteering">Volunteering</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                <li>
+                    <a class="nav-link" href="index.html">
+                        <div class="icon-text"><i class="fas fa-users fa-1x"></i> <b>SEEVEE</b></div>
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
