--- a/nick.html
+++ b/nick.html
@@ -15,6 +15,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/icon.css" rel="stylesheet" />
+        
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -34,7 +35,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li>
                         <a class="nav-link" href="index.html">
-                            <div class="icon-text"><i class="fas fa-users fa-1x"></i> SeeVees</div>
+                            <div class="icon-text"><i class="fas fa-users fa-1x"></i> <b>SEEVEE</b></div>
                         </a>
                     </li>
                 </ul>
