--- a/serena.html
+++ b/serena.html
@@ -15,6 +15,8 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/custom.css" rel="stylesheet"/>
+        <link href="css/icon.css" rel="stylesheet" />
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -34,6 +36,11 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#achievements">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li>
+                        <a class="nav-link" href="index.html">
+                            <div class="icon-text"><i class="fas fa-users fa-1x"></i> <b>SEEVEE</b></div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
