--- a/nick.html
+++ b/nick.html
@@ -97,7 +97,7 @@
                         <h3 class="mb-0">Macleans College</h3>
                         <div class="subheading mb-3">Cambridge A-Level
                         </div>
-                        <div>Clubs | Basketball, Soccer, Badminton</div>
+                        <div>Clubs & Societies | Basketball, Soccer, Badminton, RSA Collection</div>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Jan 2015 - Dec 2019</span></div>
                 </div>
@@ -189,65 +189,19 @@
     <section class="resume-section" id="awards">
         <div class="resume-section-content">
             <h2 class="mb-5">Achievements</h2>
-            <a class="js-scroll-trigger" href="#secondary">Jump to secondary schooling</a>
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>Part 1 Engineering</b></em></div>
+                    <div><em><b>Part 1 Engineering, University of Auckland</b></em></div>
                     Deans Honour List (top 5% of cohort) <br />
                     First in Course | ENGGEN 115: Principles of Engineering Design <br />
                     First in Course | ELECTENG 101: Electrical and Digital Systems <br />
-                    First in Course | CHEMMAT 121: Materials Science <br />
-                    First in CAD Design for ENGGEN 115 – Captain Pi’s Soarin’ Roger <a href="#">(see
-                        project)</a><br />
                 </li>
                 <li>
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>Scholarships</b></em></div>
-                    NZQA Scholarship Award (Calculus, Physics, Statistics, and Biology) <br />
-                    University of Auckland Top Achiever Scholarship<br />
-                    Hynds Foundation Engineering Scholarship<br />
-                </li>
-                <li id="secondary">
-                    <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>Manurewa High School</b></em></div>
-                    DUX 2019<br />
-                    Head Boy 2019<br />
-                    First in Class | Physics, Calculus, Biology, Chemistry, Statistics<br />
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>International Young Physicists Tournament</b></em></div>
-                    Captain of School Team | 4th Regionals, 6th Nationals<br />
-                    Member of National Team | Awarded Silver | @ Warsaw, Poland <a href="#">(see
-                        presentations)</a><br />
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>International Mathematics Modelling Competition</b></em></div>
-                    Member of School Team | 1st Nationals | Top 5 Internationally<br />
-                    Attended Cermony for Meritorious Teams | @ Hong Kong <a
-                        href="https://www.youtube.com/watch?v=1qxc8FXQNig" target="_blank">(see more)</a> <br />
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>Future Problem Solving Internationals</b></em></div>
-                    Member of School Team<br />
-                    Competition Year (2015/2016) | 2nd Nationals | 14th Internationals | @ Michigan University,
-                    USA<br />
-                    Competition Year (2016/2017) | 1st Nationals | 4th Internationals | @ Wisconsin University,
-                    USA<br />
-                    Competition Year (2017/2018) | 2nd Nationals | 13th Internationals | @ Wisconsin University,
-                    USA<br />
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>Student Representative on Board of Trustees | 2015</b></em></div>
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                    <div><em><b>Recipient of Ministry of Youth Development Digital Enterprise Award | 2017</b></em>
-                    </div>
+                    <div><em><b>Macleans College</b></em></div>
+                    CIE Top Achiever Award in 2019<br />
+                    First in Class | Mathematics in 2016<br />
                 </li>
             </ul>
         </div>
@@ -259,49 +213,11 @@
             <h2 class="mb-5">Volunteering</h2>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
-                    <h3 class="mb-0">YTech NZ</h3>
-                    <div class="subheading mb-3">Executive Member and Operations Lead</div>
-                    <p>In partnership with CreateOps, YTech hosts events
-                        that bring industry and secondary schools together to one place at one time to foster
-                        connection between the
-                        technological leaders of today and tomorrow.
-                        Following the success of their events such as <a href="#">‘YTech: Walking on Mars’</a> and
-                        ‘AI: The World of Tomorrow’,
-                        YTech NZ continues to provide insight into STEM pathways and hopes to expand nationwide in
-                        the future —
-                        particularly to rural and underrepresented communities.</p>
-                    <div class="social-icons-sm">
-                        <a class="social-icon-sm" href="https://www.linkedin.com/company/ytechnz/" target="_blank"><i
-                                class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon-sm" href="https://www.facebook.com/ytechnz" target="_blank"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="social-icon-sm" href="https://www.instagram.com/ytechnz/" target="_blank"><i
-                                class="fab fa-instagram"></i></a>
-                    </div>
+                    <h3 class="mb-0">ROGOBALS AUCKLAND</h3>
+                    <div class="subheading mb-3">VOLUNTEERING</div>
+                    <p>Robogals Auckland is a student-run club based at The University of Auckland. This club aims to educate kids and young adults on the STEM field. One of the workshops I volunteered for was centred on teaching communication using morse code and delivering messages to the other kids with Lego Mindstorm robots.</p>
                 </div>
-                <div class="flex-shrink-0"><span class="text-primary">Mar 2017 - Present</span></div>
-            </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between">
-                <div class="flex-grow-1">
-                    <h3 class="mb-0">Manurewa Youth Council</h3>
-                    <div class="subheading mb-3">Events Lead / Treasurer et al.
-                    </div>
-                    <p>The Manurewa Youth Council is a Charitable Trust of 21 young people between the ages of 12-24
-                        years old,
-                        selected annually from a wide range of ethnic and cultural backgrounds, reflecting the local
-                        community of
-                        Manurewa. We connect, support and empower young people to be actively involved in the
-                        community.</p>
-                    <div class="social-icons-sm">
-                        <a class="social-icon-sm" href="https://www.manurewayouthcouncil.com/" target="_blank"><i
-                                class="fas fa-globe"></i></a>
-                        <a class="social-icon-sm" href="https://www.facebook.com/rewayouthcouncil" target="_blank"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="social-icon-sm" href="https://www.instagram.com/manurewayouthcouncil"
-                            target="_blank"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-                <div class="flex-shrink-0"><span class="text-primary">Nov 2015 - Nov 2018</span></div>
+                <div class="flex-shrink-0"><span class="text-primary">Mar 2021 - Present</span></div>
             </div>
         </div>
     </section>
@@ -468,21 +384,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div style="font-size: 10px;">
-        <div><b>Icons were sourced from:</b></div>
-        <a target="_blank" href="https://icons8.com/icon/7AFcZ2zirX6Y/dart">Dart icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/7I3BjCqe9rjG/flutter">Flutter icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/39848/unity">Unity icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/13441/python">Python icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/20909/html-5">Html 5 icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/21278/css3">CSS3 icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/108784/javascript">JavaScript icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/13679/java">Java icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/40670/c-programming">C Programming icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/r5Y16PcDkoWI/matlab">MATLAB icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/xJd_7yBGvl5J/r-project">R Project icon by Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/65231/blender-3d">Blender 3D icon by Icons8</a>
     </div>
 </body>
 
