--- a/landing_page.html
+++ b/landing_page.html
@@ -26,36 +26,30 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>  -->
             <div class="carousel-inner car-scaffold">
-              <div class="carousel-item active">
-                <div class="row">
-                    <div class="column">
-                        <img src="assets/img/profile_john.jpg" alt="John" style="width:100%">
-                    </div>
-                    <div class="column">
-                        <img src="assets/img/profile_john.jpg" alt="John" style="width:100%">
-                    </div>
-                    <div class="column">
-                        <img src="assets/img/profile_john.jpg" alt="John" style="width:100%">
+                <div class="carousel-item active">
+                    <div class="container">
+                        <img class="pic-1 d-block w-100 img-fit" src="assets/img/profile_john.jpg" alt="John">
+                        <img class="pic-2 d-block w-100 img-fit" src="assets/img/profile_jack.jpg" alt="Jack">
+                        <img class="pic-3 d-block w-100 img-fit" src="assets/img/profile_serena.jpg" alt="Serena">
                     </div>
                 </div>
-              </div>
 
+                <div class="carousel-item">
+                    <div class="container">
+                        <img class="pic-1 d-block w-100 img-fit" src="assets/img/profile_angelo.jpg" alt="Angelo">
+                        <img class="pic-2 d-block w-100 img-fit" src="assets/img/profile_nick.jpg" alt="Nick">
+                        <img class="pic-3 d-block w-100 img-fit" src="assets/img/profile_jack.jpg" alt="Jack">
+                    </div>
+                </div>
 
-              <div class="carousel-item">
-                <img src="assets/img/profile_jack.jpg" class="d-block w-100" alt="Jack">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/profile_angelo.jpg" class="d-block w-100" alt="Angelo">
-              </div>
-            </div>
-            <button class="carousel-control-prev button-scaffold" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next button-scaffold" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+                <button class="carousel-control-prev button-scaffold" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next button-scaffold" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
           </div>
 
 
