--- a/landing_page.html
+++ b/landing_page.html
@@ -18,40 +18,36 @@
         <link href="landing_page.css" rel="stylesheet"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
-    <body>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <!-- <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>  -->
-            <div class="carousel-inner car-scaffold">
-                <div class="carousel-item active">
-                    <div class="container">
-                        <img class="pic-1 d-block w-100 img-fit" src="assets/img/profile_john.jpg" alt="John">
-                        <img class="pic-2 d-block w-100 img-fit" src="assets/img/profile_jack.jpg" alt="Jack">
-                        <img class="pic-3 d-block w-100 img-fit" src="assets/img/profile_serena.jpg" alt="Serena">
+
+        <body>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner car-scaffold">
+                    <div class="carousel-item active">
+                        <div class="container">
+                            <img class="pic-1 d-block w-100 img-fit" src="landing-imgs/landing_john.jpg">
+                            <img class="pic-2 d-block w-100 img-fit" src="landing-imgs/landing_jack.jpg">
+                            <img class="pic-3 d-block w-100 img-fit" src="landing-imgs/landing_serena.jpg">
+                        </div>
                     </div>
+
+                    <div class="carousel-item">
+                        <div class="container">
+                            <img class="pic-1 d-block w-100 img-fit" src="landing-imgs/landing_nick.jpg">
+                            <img class="pic-2 d-block w-100 img-fit" src="landing-imgs/landing_john.jpg">
+                            <img class="pic-3 d-block w-100 img-fit" src="landing-imgs/landing_jack.jpg">
+                        </div>
+                    </div>
+                
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                    
                 </div>
 
-                <div class="carousel-item">
-                    <div class="container">
-                        <img class="pic-1 d-block w-100 img-fit" src="assets/img/profile_angelo.jpg" alt="Angelo">
-                        <img class="pic-2 d-block w-100 img-fit" src="assets/img/profile_nick.jpg" alt="Nick">
-                        <img class="pic-3 d-block w-100 img-fit" src="assets/img/profile_jack.jpg" alt="Jack">
-                    </div>
-                </div>
-
-                <button class="carousel-control-prev button-scaffold" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next button-scaffold" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-                </button>
-          </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </body>
