--- a/john/tictactoe/index.html
+++ b/john/tictactoe/index.html
@@ -22,6 +22,7 @@
     </div>
     <div class="yeet">Press Ctrl+R to restart the game</div>
     <div class="GameStatus"> </div>
+    <div style="text-align: center; margin-top: 10%;"><a href="../../john.html">back to profile</a></div>
 </body>
 <script src="script.js"></script>
 </html>
