added links to images

--- a/landing_page.html
+++ b/landing_page.html
@@ -26,17 +26,17 @@
                 <div class="carousel-inner car-scaffold">
                     <div class="carousel-item active">
                         <div class="container">
-                            <img class="pic-1 d-block w-100 img-fit" src="landing-imgs/landing_john.jpg">
-                            <img class="pic-2 d-block w-100 img-fit" src="landing-imgs/landing_jack.jpg">
-                            <img class="pic-3 d-block w-100 img-fit" src="landing-imgs/landing_serena.jpg">
+                            <a href="john"><img class="pic-1 d-block w-100 img-fit" src="landing-imgs/landing_john.jpg"></a>
+                            <a href="jack"><img class="pic-2 d-block w-100 img-fit" src="landing-imgs/landing_jack.jpg"></a>
+                            <a href="serena"><img class="pic-3 d-block w-100 img-fit" src="landing-imgs/landing_serena.jpg"></a>
                         </div>
                     </div>
 
                     <div class="carousel-item">
                         <div class="container">
-                            <img class="pic-1 d-block w-100 img-fit" src="landing-imgs/landing_nick.jpg">
-                            <img class="pic-2 d-block w-100 img-fit" src="landing-imgs/landing_john.jpg">
-                            <img class="pic-3 d-block w-100 img-fit" src="landing-imgs/landing_jack.jpg">
+                            <a href="nick"><img class="pic-1 d-block w-100 img-fit" src="landing-imgs/landing_nick.jpg"></a>
+                            <a href="john"><img class="pic-2 d-block w-100 img-fit" src="landing-imgs/landing_john.jpg"></a>
+                            <a href="jack"><img class="pic-3 d-block w-100 img-fit" src="landing-imgs/landing_jack.jpg"></a>
                         </div>
                     </div>
                 
