--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/custom.css" rel="stylesheet"/>
-        <link href="landing_page.css" rel="stylesheet"/>
+        <link href="css/landing_page.css" rel="stylesheet"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
@@ -26,17 +26,17 @@
                 <div class="carousel-inner car-scaffold">
                     <div class="carousel-item active">
                         <div class="container">
-                            <a href="john"><img class="pic-1 d-block w-100 img-fit" src="landing-imgs/landing_john.jpg"></a>
-                            <a href="jack"><img class="pic-2 d-block w-100 img-fit" src="landing-imgs/landing_jack.jpg"></a>
-                            <a href="serena"><img class="pic-3 d-block w-100 img-fit" src="landing-imgs/landing_serena.jpg"></a>
+                            <a href="john"><img class="pic-1 d-block w-100 img-fit" src="assets/landing-imgs/landing_john.jpg"></a>
+                            <a href="jack"><img class="pic-2 d-block w-100 img-fit" src="assets/landing-imgs/landing_jack.jpg"></a>
+                            <a href="serena"><img class="pic-3 d-block w-100 img-fit" src="assets/landing-imgs/landing_serena.jpg"></a>
                         </div>
                     </div>
 
                     <div class="carousel-item">
                         <div class="container">
-                            <a href="nick"><img class="pic-1 d-block w-100 img-fit" src="landing-imgs/landing_nick.jpg"></a>
-                            <a href="john"><img class="pic-2 d-block w-100 img-fit" src="landing-imgs/landing_john.jpg"></a>
-                            <a href="jack"><img class="pic-3 d-block w-100 img-fit" src="landing-imgs/landing_jack.jpg"></a>
+                            <a href="nick"><img class="pic-1 d-block w-100 img-fit" src="assets/landing-imgs/landing_nick.jpg"></a>
+                            <a href="john"><img class="pic-2 d-block w-100 img-fit" src="assets/landing-imgs/landing_john.jpg"></a>
+                            <a href="jack"><img class="pic-3 d-block w-100 img-fit" src="assets/landing-imgs/landing_jack.jpg"></a>
                         </div>
                     </div>
                 
