--- a/john.html
+++ b/john.html
@@ -18,6 +18,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
     <link href="css/icon.css" rel="stylesheet" />
+    <link href="john/customcolor.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
