--- a/index.html
+++ b/index.html
@@ -33,4 +33,6 @@
                 <img src = "assets/landing-imgs/rightbutton.png">
             </button>
         </div>
+
+        <script src = "js/landing_page.js"></script>
     </body>
