add left/right scroll functionality

--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
     </head>
     <body>
         <div class="carousel">
-            <button class="carousel__button carousel__button--left">
-                <img src = "assets/landing-imgs/rightbutton.png">
-            </button>
             <div class="carousel__track-container">
                 <ul class="carousel__track">
-                    <li class="carousel__slide">
+                    <li class="carousel__slide current-slide">
                         <img class = "carousel_img" src = "assets/landing-imgs/landing_john.jpg">
                     </li>
                     <li class="carousel__slide">
@@ -29,6 +26,9 @@
                     </li>
                 </ul>
             </div>
+            <button class="carousel__button carousel__button--left">
+                <img src = "assets/landing-imgs/rightbutton.png">
+            </button>
             <button class="carousel__button carousel__button--right">
                 <img src = "assets/landing-imgs/rightbutton.png">
             </button>
