carousel looping from front to end

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="carousel">
             <div class="carousel__track-container">
                 <ul class="carousel__track">
-                    <li class="carousel__slide current-slide">
+                    <li class="carousel__slide current-slide first-slide">
                         <img class = "carousel_img" src = "assets/landing-imgs/landing_john.jpg">
                     </li>
                     <li class="carousel__slide">
@@ -21,8 +21,14 @@
                     <li class="carousel__slide">
                         <img class = "carousel_img" src = "assets/landing-imgs/landing_serena.jpg">
                     </li>
-                    <li class="carousel__slide">
+                    <li class="carousel__slide last-slide">
                         <img class = "carousel_img" src = "assets/landing-imgs/landing_nick.jpg">
+                    </li>
+                    <li class="carousel__slide">
+                        <img class = "carousel_img" src = "assets/landing-imgs/landing_nicholas.jpg">
+                    </li>
+                    <li class="carousel__slide">
+                        <img class = "carousel_img" src = "assets/landing-imgs/landing_angelo.jpg">
                     </li>
                 </ul>
             </div>
