--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </ul>
             </div>
             <button class="carousel__button carousel__button--left">
-                <img src = "assets/landing-imgs/rightbutton.png">
+                <img src = "assets/landing-imgs/line-angle-left.svg">
             </button>
             <button class="carousel__button carousel__button--right">
-                <img src = "assets/landing-imgs/rightbutton.png">
+                <img src = "assets/landing-imgs/line-angle-right.svg">
             </button>
         </div>
 
