remove margins and prevent scrolling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Seevee</title>
         <link href="css/landing_page.css" rel="stylesheet"/>
     </head>
-    <body>
+    <body scroll="no" style="overflow: hidden">
         <div class="carousel">
             <div class="carousel__track-container">
                 <ul class="carousel__track">
