added seevee logo

--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
             </button>
         </div>
 
+        <div class="seevee">SEEVEE.</div>
+
         <script src = "js/landing_page.js"></script>
     </body>
