images now link to pages

--- a/index.html
+++ b/index.html
@@ -13,22 +13,33 @@
             <div class="carousel__track-container">
                 <ul class="carousel__track">
                     <li class="carousel__slide current-slide first-slide">
-                        <img class = "carousel_img" src = "assets/landing-imgs/landing_john.jpg">
+                        <a href="john.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_john.jpg">
+                        </a>
                     </li>
                     <li class="carousel__slide">
-                        <img class = "carousel_img" src = "assets/landing-imgs/landing_jack.jpg">
-                    </li>
+                        <a href="jack.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_jack.jpg">
+                        </a>
                     <li class="carousel__slide">
-                        <img class = "carousel_img" src = "assets/landing-imgs/landing_serena.jpg">
+                        <a href="serena.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_serena.jpg">
+                        </a>
                     </li>
                     <li class="carousel__slide last-slide">
-                        <img class = "carousel_img" src = "assets/landing-imgs/landing_nick.jpg">
+                        <a href="nick.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_nick.jpg">
+                        </a>
                     </li>
                     <li class="carousel__slide">
-                        <img class = "carousel_img" src = "assets/landing-imgs/landing_nicholas.jpg">
+                        <a href="nicholas.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_nicholas.jpg">
+                        </a>
                     </li>
                     <li class="carousel__slide">
-                        <img class = "carousel_img" src = "assets/landing-imgs/landing_angelo.jpg">
+                        <a href="angelo.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_angelo.jpg">
+                        </a>
                     </li>
                 </ul>
             </div>
