removed unused index.css file and slight refactor

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Seevee</title>
+        <title>seevee</title>
         <link href="css/landing_page.css" rel="stylesheet"/>
     </head>
     <body scroll="no" style="overflow: hidden">
