fixed autorotate, made carousel loop infinitely

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <img class = "carousel_img" src = "assets/landing-imgs/landing_serena.jpg">
                         </a>
                     </li>
-                    <li class="carousel__slide last-slide">
+                    <li class="carousel__slide">
                         <a href="nick.html">
                             <img class = "carousel_img" src = "assets/landing-imgs/landing_nick.jpg">
                         </a>
@@ -36,9 +36,23 @@
                             <img class = "carousel_img" src = "assets/landing-imgs/landing_nicholas.jpg">
                         </a>
                     </li>
-                    <li class="carousel__slide">
+                    <li class="carousel__slide last-slide">
                         <a href="angelo.html">
                             <img class = "carousel_img" src = "assets/landing-imgs/landing_angelo.jpg">
+                        </a>
+                    </li>
+                    <li class="carousel__slide">
+                        <a href="john.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_john.jpg">
+                        </a>
+                    </li>
+                    <li class="carousel__slide">
+                        <a href="jack.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_jack.jpg">
+                        </a>
+                    <li class="carousel__slide">
+                        <a href="serena.html">
+                            <img class = "carousel_img" src = "assets/landing-imgs/landing_serena.jpg">
                         </a>
                     </li>
                 </ul>
