mobile functionality implemented. mvp

--- a/index.html
+++ b/index.html
@@ -1,71 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>seevee</title>
-        <link href="css/landing_page.css" rel="stylesheet"/>
-    </head>
-    <body scroll="no" style="overflow: hidden">
-        <div class="carousel">
-            <div class="carousel__track-container">
-                <ul class="carousel__track">
-                    <li class="carousel__slide current-slide first-slide">
-                        <a href="john.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_john.jpg">
-                        </a>
-                    </li>
-                    <li class="carousel__slide">
-                        <a href="jack.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_jack.jpg">
-                        </a>
-                    <li class="carousel__slide">
-                        <a href="serena.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_serena.jpg">
-                        </a>
-                    </li>
-                    <li class="carousel__slide">
-                        <a href="nick.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_nick.jpg">
-                        </a>
-                    </li>
-                    <li class="carousel__slide">
-                        <a href="nicholas.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_nicholas.jpg">
-                        </a>
-                    </li>
-                    <li class="carousel__slide last-slide">
-                        <a href="angelo.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_angelo.jpg">
-                        </a>
-                    </li>
-                    <li class="carousel__slide">
-                        <a href="john.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_john.jpg">
-                        </a>
-                    </li>
-                    <li class="carousel__slide">
-                        <a href="jack.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_jack.jpg">
-                        </a>
-                    <li class="carousel__slide">
-                        <a href="serena.html">
-                            <img class = "carousel_img" src = "assets/landing-imgs/landing_serena.jpg">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <button class="carousel__button carousel__button--left">
-                <img src = "assets/landing-imgs/line-angle-left.svg">
-            </button>
-            <button class="carousel__button carousel__button--right">
-                <img src = "assets/landing-imgs/line-angle-right.svg">
-            </button>
-        </div>
 
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>seevee</title>
+    <link href="css/landing_page.css" rel="stylesheet" />
+</head>
+
+<body scroll="no" style="overflow: hidden">
+    <div class="carousel">
+        <div class="carousel__track-container">
+            <ul class="carousel__track">
+                <li class="carousel__slide current-slide first-slide">
+                    <a href="john.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_john.jpg">
+                    </a>
+                </li>
+                <li class="carousel__slide">
+                    <a href="jack.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_jack.jpg">
+                    </a>
+                <li class="carousel__slide">
+                    <a href="serena.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_serena.jpg">
+                    </a>
+                </li>
+                <li class="carousel__slide">
+                    <a href="nick.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_nick.jpg">
+                    </a>
+                </li>
+                <li class="carousel__slide">
+                    <a href="nicholas.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_nicholas.jpg">
+                    </a>
+                </li>
+                <li class="carousel__slide last-slide">
+                    <a href="angelo.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_angelo.jpg">
+                    </a>
+                </li>
+                <li class="carousel__slide">
+                    <a href="john.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_john.jpg">
+                    </a>
+                </li>
+                <li class="carousel__slide">
+                    <a href="jack.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_jack.jpg">
+                    </a>
+                <li class="carousel__slide">
+                    <a href="serena.html">
+                        <img class="carousel_img" src="assets/landing-imgs/landing_serena.jpg">
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <button class="carousel__button carousel__button--left">
+            <img src="assets/landing-imgs/line-angle-left.svg">
+        </button>
+        <button class="carousel__button carousel__button--right">
+            <img src="assets/landing-imgs/line-angle-right.svg">
+        </button>
+    </div>
+
+    <div class="bot">
         <div class="seevee">SEEVEE.</div>
 
-        <script src = "js/landing_page.js"></script>
-    </body>
+    <div class="descript">Mobile description to be added <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatem eius eveniet suscipit cupiditate saepe modi, commodi esse, ullam non molestiae cumque ad debitis
+        ducimus placeat, quod dicta consequuntur neque similique?</div>
+    </div>
+    
+
+    <script src="js/landing_page.js"></script>
+</body>
