mobile text content added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -70,11 +71,12 @@
     <div class="bot">
         <div class="seevee">SEEVEE.</div>
 
-    <div class="descript">Mobile description to be added <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Voluptatem eius eveniet suscipit cupiditate saepe modi, commodi esse, ullam non molestiae cumque ad debitis
-        ducimus placeat, quod dicta consequuntur neque similique?</div>
+        <div class="descript"> A web portfolio platform created by  BE Hons Software Engineering
+            students in their pre-penultimate year of study [2021]. <br><br> It serves as a means to showcase both
+            individual and team projects / achievements. <br><br><b>Click on the profiles above to see each of our
+                profiles.</b><br><br><a href="https://github.com/johnchen383/seevee">See our Github Repository.</a></div>
     </div>
-    
+
 
     <script src="js/landing_page.js"></script>
 </body>
