icons added for dark mode and chinese

--- a/john.html
+++ b/john.html
@@ -76,6 +76,8 @@
                             class="fab fa-github"></i></a>
                     <a class="social-icon" href="https://www.facebook.com/john.chen.3836" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
+                    <a class="social-icon goodies" href="#"><i class="fas fa-moon"></i></a>
+                    <a class="social-icon goodies" href="#" style="text-decoration: none">中</a>
                 </div>
             </div>
         </section>
