--- a/john.html
+++ b/john.html
@@ -15,10 +15,10 @@
         type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <!-- <link href="css/styles.css" rel="stylesheet" /> -->
     <link href="css/custom.css" rel="stylesheet" />
     <link href="css/icon.css" rel="stylesheet" />
-    <link href="john/customcolor.css" rel="stylesheet" />
+    <link href="john/john.css" rel="stylesheet" />
 </head>
 
 <body id="page-top">
@@ -76,7 +76,7 @@
                             class="fab fa-github"></i></a>
                     <a class="social-icon" href="https://www.facebook.com/john.chen.3836" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
-                    <a class="social-icon goodies" href="#"><i class="fas fa-moon"></i></a>
+                    <a class="social-icon goodies" href="#" id="darkBtn"><i class="fas fa-moon"></i></a>
                     <a class="social-icon goodies" href="#" style="text-decoration: none">中</a>
                 </div>
             </div>
@@ -513,7 +513,7 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <script src="js/custom.js"></script>
-
+    <script src="/john/john.js"></script>
     <!-- Modal -->
     <div class="modal fade" id="vidModal">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
