started chinese translation ;)

--- a/john.html
+++ b/john.html
@@ -75,7 +75,7 @@
                     <a class="social-icon" href="https://github.com/johnchen383" target="_blank"><i
                             class="fab fa-github"></i></a>
                     <a class="social-icon goodies" href="#" id="darkBtn"><i class="fas fa-moon"></i></a>
-                    <a class="social-icon goodies" href="#" style="text-decoration: none">中</a>
+                    <a class="social-icon goodies" href="#" id="langBtn" style="text-decoration: none">中</a>
                 </div>
                 
             </div>
