fixed funct for translation. fixed dark mode. still need to translate

--- a/john.html
+++ b/john.html
@@ -246,6 +246,12 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                    <div><em><b>Part 2 Engineering</b></em></div>
+                    First in Course | SOFTENG 281 – Object-Oriented Programming <br />
+                    First in Course | COMPSYS 201 – Fundamentals of Computer Engineering <br />
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                     <div><em><b>Part 1 Engineering</b></em></div>
                     Deans Honour List (top 5% of cohort) <br />
                     First in Course | ENGGEN 115: Principles of Engineering Design <br />
