most links resolved

--- a/john.html
+++ b/john.html
@@ -77,7 +77,7 @@
                     <a class="social-icon goodies" href="#" id="darkBtn"><i class="fas fa-moon"></i></a>
                     <a class="social-icon goodies" href="#" id="langBtn" style="text-decoration: none">中</a>
                 </div>
-                
+
             </div>
         </section>
         <hr class="m-0" />
@@ -278,7 +278,8 @@
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                     <div><em><b>International Young Physicists Tournament</b></em></div>
                     Captain of School Team | 4th Regionals, 6th Nationals<br />
-                    Member of National Team | Awarded Silver | @ Warsaw, Poland <a href="#">(see
+                    Member of National Team | Awarded Silver | @ Warsaw, Poland <a
+                        href="https://www.youtube.com/watch?v=KYo6XEa1LU8&list=PL4qPZTW1_IOejFItGfFivv1OWlh-4Z2WB" target="_blank">(see
                         presentations)</a><br />
                 </li>
                 <li>
@@ -324,7 +325,7 @@
                         that bring industry and secondary schools together to one place at one time to foster
                         connection between the
                         technological leaders of today and tomorrow.
-                        Following the success of their events such as <a href="#">‘YTech: Walking on Mars’</a> and
+                        Following the success of their events such as <a href="https://www.youtube.com/watch?v=iy3VW4L0dAY" target="_blank">‘YTech: Walking on Mars’</a> and
                         ‘AI: The World of Tomorrow’,
                         YTech NZ continues to provide insight into STEM pathways and hopes to expand nationwide in
                         the future —
